c/soloud_c.h


typedef void * Ay;

typedef void * AudioCollider;

typedef void * AudioAttenuator;

typedef void * AudioSource;

typedef void * BassboostFilter;

typedef void * BiquadResonantFilter;

typedef void * Bus;

typedef void * DCRemovalFilter;

typedef void * EchoFilter;

typedef void * FFTFilter;

typedef void * Filter;

typedef void * FlangerFilter;

typedef void * FreeverbFilter;

typedef void * LofiFilter;


/*
 * Ay
 */
void Ay_destroy(Ay * aAy);

Ay * Ay_create();

void Ay_setVolume(Ay * aAy, float aVolume);

void Ay_setLooping(Ay * aAy, int aLoop);

void Ay_setAutoStop(Ay * aAy, int aAutoStop);

void Ay_set3dMinMaxDistance(Ay * aAy, float aMinDistance, float aMaxDistance);

void Ay_set3dAttenuation(Ay * aAy, unsigned int aAttenuationModel, float aAttenuationRolloffFactor);

void Ay_set3dDopplerFactor(Ay * aAy, float aDopplerFactor);

void Ay_set3dListenerRelative(Ay * aAy, int aListenerRelative);

void Ay_set3dDistanceDelay(Ay * aAy, int aDistanceDelay);

void Ay_set3dCollider(Ay * aAy, AudioCollider * aCollider);

void Ay_set3dColliderEx(Ay * aAy, AudioCollider * aCollider, int aUserData /* = 0 */);

void Ay_set3dAttenuator(Ay * aAy, AudioAttenuator * aAttenuator);

void Ay_setInaudibleBehavior(Ay * aAy, int aMustTick, int aKill);

void Ay_setLoopPoint(Ay * aAy, double aLoopPoint);

double Ay_getLoopPoint(Ay * aAy);

void Ay_setFilter(Ay * aAy, unsigned int aFilterId, Filter * aFilter);

void Ay_stop(Ay * aAy);


/*
 * BassboostFilter
 */
void BassboostFilter_destroy(BassboostFilter * aBassboostFilter);

int BassboostFilter_getParamCount(BassboostFilter * aBassboostFilter);

const char * BassboostFilter_getParamName(BassboostFilter * aBassboostFilter, unsigned int aParamIndex);

unsigned int BassboostFilter_getParamType(BassboostFilter * aBassboostFilter, unsigned int aParamIndex);

float BassboostFilter_getParamMax(BassboostFilter * aBassboostFilter, unsigned int aParamIndex);

float BassboostFilter_getParamMin(BassboostFilter * aBassboostFilter, unsigned int aParamIndex);

int BassboostFilter_setParams(BassboostFilter * aBassboostFilter, float aBoost);

BassboostFilter * BassboostFilter_create();


/*
 * BiquadResonantFilter
 */
void BiquadResonantFilter_destroy(BiquadResonantFilter * aBiquadResonantFilter);

int BiquadResonantFilter_getParamCount(BiquadResonantFilter * aBiquadResonantFilter);

const char * BiquadResonantFilter_getParamName(BiquadResonantFilter * aBiquadResonantFilter, unsigned int aParamIndex);

unsigned int BiquadResonantFilter_getParamType(BiquadResonantFilter * aBiquadResonantFilter, unsigned int aParamIndex);

float BiquadResonantFilter_getParamMax(BiquadResonantFilter * aBiquadResonantFilter, unsigned int aParamIndex);

float BiquadResonantFilter_getParamMin(BiquadResonantFilter * aBiquadResonantFilter, unsigned int aParamIndex);

BiquadResonantFilter * BiquadResonantFilter_create();

int BiquadResonantFilter_setParams(BiquadResonantFilter * aBiquadResonantFilter, int aType, float aFrequency, float aResonance);


/*
 * Bus
 */
void Bus_destroy(Bus * aBus);

Bus * Bus_create();

void Bus_setFilter(Bus * aBus, unsigned int aFilterId, Filter * aFilter);

unsigned int Bus_play(Bus * aBus, AudioSource * aSound);

unsigned int Bus_playEx(Bus * aBus, AudioSource * aSound, float aVolume /* = 1.0f */, float aPan /* = 0.0f */, int aPaused /* = 0 */);

unsigned int Bus_playClocked(Bus * aBus, double aSoundTime, AudioSource * aSound);

unsigned int Bus_playClockedEx(Bus * aBus, double aSoundTime, AudioSource * aSound, float aVolume /* = 1.0f */, float aPan /* = 0.0f */);

unsigned int Bus_play3d(Bus * aBus, AudioSource * aSound, float aPosX, float aPosY, float aPosZ);

unsigned int Bus_play3dEx(Bus * aBus, AudioSource * aSound, float aPosX, float aPosY, float aPosZ, float aVelX /* = 0.0f */, float aVelY /* = 0.0f */, float aVelZ /* = 0.0f */, float aVolume /* = 1.0f */, int aPaused /* = 0 */);

unsigned int Bus_play3dClocked(Bus * aBus, double aSoundTime, AudioSource * aSound, float aPosX, float aPosY, float aPosZ);

unsigned int Bus_play3dClockedEx(Bus * aBus, double aSoundTime, AudioSource * aSound, float aPosX, float aPosY, float aPosZ, float aVelX /* = 0.0f */, float aVelY /* = 0.0f */, float aVelZ /* = 0.0f */, float aVolume /* = 1.0f */);

int Bus_setChannels(Bus * aBus, unsigned int aChannels);

void Bus_setVisualizationEnable(Bus * aBus, int aEnable);

void Bus_annexSound(Bus * aBus, unsigned int aVoiceHandle);

float * Bus_calcFFT(Bus * aBus);

float * Bus_getWave(Bus * aBus);

float Bus_getApproximateVolume(Bus * aBus, unsigned int aChannel);

unsigned int Bus_getActiveVoiceCount(Bus * aBus);

unsigned int Bus_getResampler(Bus * aBus);

void Bus_setResampler(Bus * aBus, unsigned int aResampler);

void Bus_setVolume(Bus * aBus, float aVolume);

void Bus_setLooping(Bus * aBus, int aLoop);

void Bus_setAutoStop(Bus * aBus, int aAutoStop);

void Bus_set3dMinMaxDistance(Bus * aBus, float aMinDistance, float aMaxDistance);

void Bus_set3dAttenuation(Bus * aBus, unsigned int aAttenuationModel, float aAttenuationRolloffFactor);

void Bus_set3dDopplerFactor(Bus * aBus, float aDopplerFactor);

void Bus_set3dListenerRelative(Bus * aBus, int aListenerRelative);

void Bus_set3dDistanceDelay(Bus * aBus, int aDistanceDelay);

void Bus_set3dCollider(Bus * aBus, AudioCollider * aCollider);

void Bus_set3dColliderEx(Bus * aBus, AudioCollider * aCollider, int aUserData /* = 0 */);

void Bus_set3dAttenuator(Bus * aBus, AudioAttenuator * aAttenuator);

void Bus_setInaudibleBehavior(Bus * aBus, int aMustTick, int aKill);

void Bus_setLoopPoint(Bus * aBus, double aLoopPoint);

double Bus_getLoopPoint(Bus * aBus);

void Bus_stop(Bus * aBus);


/*
 * DCRemovalFilter
 */
void DCRemovalFilter_destroy(DCRemovalFilter * aDCRemovalFilter);

DCRemovalFilter * DCRemovalFilter_create();

int DCRemovalFilter_setParams(DCRemovalFilter * aDCRemovalFilter);

int DCRemovalFilter_setParamsEx(DCRemovalFilter * aDCRemovalFilter, float aLength /* = 0.1f */);

int DCRemovalFilter_getParamCount(DCRemovalFilter * aDCRemovalFilter);

const char * DCRemovalFilter_getParamName(DCRemovalFilter * aDCRemovalFilter, unsigned int aParamIndex);

unsigned int DCRemovalFilter_getParamType(DCRemovalFilter * aDCRemovalFilter, unsigned int aParamIndex);

float DCRemovalFilter_getParamMax(DCRemovalFilter * aDCRemovalFilter, unsigned int aParamIndex);

float DCRemovalFilter_getParamMin(DCRemovalFilter * aDCRemovalFilter, unsigned int aParamIndex);


/*
 * EchoFilter
 */
void EchoFilter_destroy(EchoFilter * aEchoFilter);

int EchoFilter_getParamCount(EchoFilter * aEchoFilter);

const char * EchoFilter_getParamName(EchoFilter * aEchoFilter, unsigned int aParamIndex);

unsigned int EchoFilter_getParamType(EchoFilter * aEchoFilter, unsigned int aParamIndex);

float EchoFilter_getParamMax(EchoFilter * aEchoFilter, unsigned int aParamIndex);

float EchoFilter_getParamMin(EchoFilter * aEchoFilter, unsigned int aParamIndex);

EchoFilter * EchoFilter_create();

int EchoFilter_setParams(EchoFilter * aEchoFilter, float aDelay);

int EchoFilter_setParamsEx(EchoFilter * aEchoFilter, float aDelay, float aDecay /* = 0.7f */, float aFilter /* = 0.0f */);


/*
 * FFTFilter
 */
void FFTFilter_destroy(FFTFilter * aFFTFilter);

FFTFilter * FFTFilter_create();

int FFTFilter_getParamCount(FFTFilter * aFFTFilter);

const char * FFTFilter_getParamName(FFTFilter * aFFTFilter, unsigned int aParamIndex);

unsigned int FFTFilter_getParamType(FFTFilter * aFFTFilter, unsigned int aParamIndex);

float FFTFilter_getParamMax(FFTFilter * aFFTFilter, unsigned int aParamIndex);

float FFTFilter_getParamMin(FFTFilter * aFFTFilter, unsigned int aParamIndex);


/*
 * FlangerFilter
 */
void FlangerFilter_destroy(FlangerFilter * aFlangerFilter);

int FlangerFilter_getParamCount(FlangerFilter * aFlangerFilter);

const char * FlangerFilter_getParamName(FlangerFilter * aFlangerFilter, unsigned int aParamIndex);

unsigned int FlangerFilter_getParamType(FlangerFilter * aFlangerFilter, unsigned int aParamIndex);

float FlangerFilter_getParamMax(FlangerFilter * aFlangerFilter, unsigned int aParamIndex);

float FlangerFilter_getParamMin(FlangerFilter * aFlangerFilter, unsigned int aParamIndex);

FlangerFilter * FlangerFilter_create();

int FlangerFilter_setParams(FlangerFilter * aFlangerFilter, float aDelay, float aFreq);


/*
 * FreeverbFilter
 */
void FreeverbFilter_destroy(FreeverbFilter * aFreeverbFilter);

int FreeverbFilter_getParamCount(FreeverbFilter * aFreeverbFilter);

const char * FreeverbFilter_getParamName(FreeverbFilter * aFreeverbFilter, unsigned int aParamIndex);

unsigned int FreeverbFilter_getParamType(FreeverbFilter * aFreeverbFilter, unsigned int aParamIndex);

float FreeverbFilter_getParamMax(FreeverbFilter * aFreeverbFilter, unsigned int aParamIndex);

float FreeverbFilter_getParamMin(FreeverbFilter * aFreeverbFilter, unsigned int aParamIndex);

FreeverbFilter * FreeverbFilter_create();

int FreeverbFilter_setParams(FreeverbFilter * aFreeverbFilter, float aMode, float aRoomSize, float aDamp, float aWidth);


/*
 * LofiFilter
 */
void LofiFilter_destroy(LofiFilter * aLofiFilter);

int LofiFilter_getParamCount(LofiFilter * aLofiFilter);

const char * LofiFilter_getParamName(LofiFilter * aLofiFilter, unsigned int aParamIndex);

unsigned int LofiFilter_getParamType(LofiFilter * aLofiFilter, unsigned int aParamIndex);

float LofiFilter_getParamMax(LofiFilter * aLofiFilter, unsigned int aParamIndex);

float LofiFilter_getParamMin(LofiFilter * aLofiFilter, unsigned int aParamIndex);

LofiFilter * LofiFilter_create();

int LofiFilter_setParams(LofiFilter * aLofiFilter, float aSampleRate, float aBitdepth);