soloud.odin


	/*
 * Ay
 */
	Ay_destroy :: proc(aAy: ^Ay) ---
	Ay_create :: proc() -> ^Ay ---
	Ay_setVolume :: proc(aAy: ^Ay, aVolume: f32) ---
	Ay_setLooping :: proc(aAy: ^Ay, aLoop: b32) ---
	Ay_setAutoStop :: proc(aAy: ^Ay, aAutoStop: b32) ---
	Ay_set3dMinMaxDistance :: proc(aAy: ^Ay, aMinDistance: f32, aMaxDistance: f32) ---
	Ay_set3dAttenuation :: proc(aAy: ^Ay, aAttenuationModel: u32, aAttenuationRolloffFactor: f32) ---
	Ay_set3dDopplerFactor :: proc(aAy: ^Ay, aDopplerFactor: f32) ---
	Ay_set3dListenerRelative :: proc(aAy: ^Ay, aListenerRelative: b32) ---
	Ay_set3dDistanceDelay :: proc(aAy: ^Ay, aDistanceDelay: b32) ---
	Ay_set3dCollider :: proc(aAy: ^Ay, aCollider: ^AudioCollider) ---
	Ay_set3dColliderEx :: proc(aAy: ^Ay,
		aCollider: ^AudioCollider,
		aUserData: b32, /* = 0 */) ---
	Ay_set3dAttenuator :: proc(aAy: ^Ay, aAttenuator: ^AudioAttenuator) ---
	Ay_setInaudibleBehavior :: proc(aAy: ^Ay, aMustTick: b32, aKill: b32) ---
	Ay_setLoopPoint :: proc(aAy: ^Ay, aLoopPoint: f64) ---
	Ay_getLoopPoint :: proc(aAy: ^Ay) -> f64 ---
	Ay_setFilter :: proc(aAy: ^Ay, aFilterId: u32, aFilter: ^Filter) ---
	Ay_stop :: proc(aAy: ^Ay) ---

	/*
 * BassboostFilter
 */
	BassboostFilter_destroy :: proc(aBassboostFilter: ^BassboostFilter) ---
	BassboostFilter_getParamCount :: proc(aBassboostFilter: ^BassboostFilter) -> i32 ---
	BassboostFilter_getParamName :: proc(aBassboostFilter: ^BassboostFilter, aParamIndex: u32) -> cstring ---
	BassboostFilter_getParamType :: proc(aBassboostFilter: ^BassboostFilter, aParamIndex: u32) -> u32 ---
	BassboostFilter_getParamMax :: proc(aBassboostFilter: ^BassboostFilter, aParamIndex: u32) -> f32 ---
	BassboostFilter_getParamMin :: proc(aBassboostFilter: ^BassboostFilter, aParamIndex: u32) -> f32 ---
	BassboostFilter_setParams :: proc(aBassboostFilter: ^BassboostFilter, aBoost: f32) -> b32 ---
	BassboostFilter_create :: proc() -> ^BassboostFilter ---

	/*
		* BiquadResonantFilter
		*/
	BiquadResonantFilter_destroy :: proc(aBiquadResonantFilter: ^BiquadResonantFilter) ---
	BiquadResonantFilter_getParamCount :: proc(aBiquadResonantFilter: ^BiquadResonantFilter) -> i32 ---
	BiquadResonantFilter_getParamName :: proc(aBiquadResonantFilter: ^BiquadResonantFilter, aParamIndex: u32) -> cstring ---
	BiquadResonantFilter_getParamType :: proc(aBiquadResonantFilter: ^BiquadResonantFilter, aParamIndex: u32) -> u32 ---
	BiquadResonantFilter_getParamMax :: proc(aBiquadResonantFilter: ^BiquadResonantFilter, aParamIndex: u32) -> f32 ---
	BiquadResonantFilter_getParamMin :: proc(aBiquadResonantFilter: ^BiquadResonantFilter, aParamIndex: u32) -> f32 ---
	BiquadResonantFilter_create :: proc() -> ^BiquadResonantFilter ---
	BiquadResonantFilter_setParams :: proc(aBiquadResonantFilter: ^BiquadResonantFilter, aType: i32, aFrequency: f32, aResonance: f32) -> b32 ---

	/*
		* Bus
		*/
	Bus_destroy :: proc(aBus: ^Bus) ---
	Bus_create :: proc() -> ^Bus ---
	Bus_setFilter :: proc(aBus: ^Bus, aFilterId: u32, aFilter: ^Filter) ---
	Bus_play :: proc(aBus: ^Bus, aSound: ^AudioSource) -> u32 ---
	Bus_playEx :: proc(aBus: ^Bus,
		aSound: ^AudioSource,
		aVolume: f32, /* = 1.0f */
		aPan: f32, /* = 0.0f */
		aPaused: b32, /* = 0 */) -> u32 ---
	Bus_playClocked :: proc(aBus: ^Bus, aSoundTime: f64, aSound: ^AudioSource) -> u32 ---
	Bus_playClockedEx :: proc(aBus: ^Bus,
		aSoundTime: f64,
		aSound: ^AudioSource,
		aVolume: f32, /* = 1.0f */
		aPan: f32, /* = 0.0f */) -> u32 ---
	Bus_play3d :: proc(aBus: ^Bus, aSound: ^AudioSource, aPosX: f32, aPosY: f32, aPosZ: f32) -> u32 ---
	Bus_play3dEx :: proc(aBus: ^Bus,
		aSound: ^AudioSource,
		aPosX: f32,
		aPosY: f32,
		aPosZ: f32,
		aVelX: f32, /* = 0.0f */
		aVelY: f32, /* = 0.0f */
		aVelZ: f32, /* = 0.0f */
		aVolume: f32, /* = 1.0f */
		aPaused: b32, /* = 0 */) -> u32 ---
	Bus_play3dClocked :: proc(aBus: ^Bus, aSoundTime: f64, aSound: ^AudioSource, aPosX: f32, aPosY: f32, aPosZ: f32) -> u32 ---
	Bus_play3dClockedEx :: proc(aBus: ^Bus,
		aSoundTime: f64,
		aSound: ^AudioSource,
		aPosX: f32,
		aPosY: f32,
		aPosZ: f32,
		aVelX: f32, /* = 0.0f */
		aVelY: f32, /* = 0.0f */
		aVelZ: f32, /* = 0.0f */
		aVolume: f32, /* = 1.0f */) -> u32 ---
	Bus_setChannels :: proc(aBus: ^Bus, aChannels: u32) -> i32 --- // TODO: Should be bool?
	Bus_setVisualizationEnable :: proc(aBus: ^Bus, aEnable: b32) ---
	Bus_annexSound :: proc(aBus: ^Bus, aVoiceHandle: u32) ---
	Bus_calcFFT :: proc(aBus: ^Bus) -> ^f32 --- // TODO: should be [^]f32?
	Bus_getWave :: proc(aBus: ^Bus) -> ^f32 --- // TODO: should be [^]f32?
	Bus_getApproximateVolume :: proc(aBus: ^Bus, aChannel: u32) -> f32 ---
	Bus_getActiveVoiceCount :: proc(aBus: ^Bus) -> u32 ---
	Bus_getResampler :: proc(aBus: ^Bus) -> u32 ---
	Bus_setResampler :: proc(aBus: ^Bus, aResampler: u32) ---
	Bus_setVolume :: proc(aBus: ^Bus, aVolume: f32) ---
	Bus_setLooping :: proc(aBus: ^Bus, aLoop: b32) ---
	Bus_setAutoStop :: proc(aBus: ^Bus, aAutoStop: b32) ---
	Bus_set3dMinMaxDistance :: proc(aBus: ^Bus, aMinDistance: f32, aMaxDistance: f32) ---
	Bus_set3dAttenuation :: proc(aBus: ^Bus, aAttenuationModel: u32, aAttenuationRolloffFactor: f32) ---
	Bus_set3dDopplerFactor :: proc(aBus: ^Bus, aDopplerFactor: f32) ---
	Bus_set3dListenerRelative :: proc(aBus: ^Bus, aListenerRelative: b32) ---
	Bus_set3dDistanceDelay :: proc(aBus: ^Bus, aDistanceDelay: b32) ---
	Bus_set3dCollider :: proc(aBus: ^Bus, aCollider: ^AudioCollider) ---
	Bus_set3dColliderEx :: proc(aBus: ^Bus,
		aCollider: ^AudioCollider,
		aUserData: b32, /* = 0 */) ---
	Bus_set3dAttenuator :: proc(aBus: ^Bus, aAttenuator: ^AudioAttenuator) ---
	Bus_setInaudibleBehavior :: proc(aBus: ^Bus, aMustTick: b32, aKill: b32) ---
	Bus_setLoopPoint :: proc(aBus: ^Bus, aLoopPoint: f64) ---
	Bus_getLoopPoint :: proc(aBus: ^Bus) -> f64 ---
	Bus_stop :: proc(aBus: ^Bus) ---

	/*
 * DCRemovalFilter
 */
	DCRemovalFilter_destroy :: proc(aDCRemovalFilter: ^DCRemovalFilter) ---
	DCRemovalFilter_create :: proc() -> DCRemovalFilter ---
	DCRemovalFilter_setParams :: proc(aDCRemovalFilter: ^DCRemovalFilter) -> i32 ---
	DCRemovalFilter_setParamsEx :: proc(aDCRemovalFilter: ^DCRemovalFilter,
		aLength: f32, /* = 0.1f */) -> i32 ---
	DCRemovalFilter_getParamCount :: proc(aDCRemovalFilter: ^DCRemovalFilter) -> i32 ---
	DCRemovalFilter_getParamName :: proc(aDCRemovalFilter: ^DCRemovalFilter, aParamIndex: u32) -> cstring ---
	DCRemovalFilter_getParamType :: proc(aDCRemovalFilter: ^DCRemovalFilter, aParamIndex: u32) -> u32 ---
	DCRemovalFilter_getParamMax :: proc(aDCRemovalFilter: ^DCRemovalFilter, aParamIndex: u32) -> f32 ---
	DCRemovalFilter_getParamMin :: proc(aDCRemovalFilter: ^DCRemovalFilter, aParamIndex: u32) -> f32 ---

	/*
		* EchoFilter
		*/
	EchoFilter_destroy :: proc(aEchoFilter: ^EchoFilter) ---
	EchoFilter_getParamCount :: proc(aEchoFilter: ^EchoFilter) -> i32 ---
	EchoFilter_getParamName :: proc(aEchoFilter: ^EchoFilter, aParamIndex: u32) -> cstring ---
	EchoFilter_getParamType :: proc(aEchoFilter: ^EchoFilter, aParamIndex: u32) -> u32 ---
	EchoFilter_getParamMax :: proc(aEchoFilter: ^EchoFilter, aParamIndex: u32) -> f32 ---
	EchoFilter_getParamMin :: proc(aEchoFilter: ^EchoFilter, aParamIndex: u32) -> f32 ---
	EchoFilter_create :: proc() -> ^EchoFilter ---
	EchoFilter_setParams :: proc(aEchoFilter: ^EchoFilter, aDelay: f32) -> b32 ---
	EchoFilter_setParamsEx :: proc(aEchoFilter: ^EchoFilter,
		aDelay: f32,
		aDecay: f32, /* = 0.7f */
		aFilter: f32, /* = 0.0f */) -> b32 ---

	/*
		* FFTFilter
		*/
	FFTFilter_destroy :: proc(aFFTFilter: ^FFTFilter) ---
	FFTFilter_create :: proc() -> ^FFTFilter ---
	FFTFilter_getParamCount :: proc(aFFTFilter: ^FFTFilter) -> i32 ---
	FFTFilter_getParamName :: proc(aFFTFilter: ^FFTFilter, aParamIndex: u32) -> cstring ---
	FFTFilter_getParamType :: proc(aFFTFilter: ^FFTFilter, aParamIndex: u32) -> u32 ---
	FFTFilter_getParamMax :: proc(aFFTFilter: ^FFTFilter, aParamIndex: u32) -> f32 ---
	FFTFilter_getParamMin :: proc(aFFTFilter: ^FFTFilter, aParamIndex: u32) -> f32 ---

	/*
		* FlangerFilter
		*/
	FlangerFilter_destroy :: proc(aFlangerFilter: ^FlangerFilter) ---
	FlangerFilter_getParamCount :: proc(aFlangerFilter: ^FlangerFilter) -> i32 ---
	FlangerFilter_getParamName :: proc(aFlangerFilter: ^FlangerFilter, aParamIndex: u32) -> cstring ---
	FlangerFilter_getParamType :: proc(aFlangerFilter: ^FlangerFilter, aParamIndex: u32) -> u32 ---
	FlangerFilter_getParamMax :: proc(aFlangerFilter: ^FlangerFilter, aParamIndex: u32) -> f32 ---
	FlangerFilter_getParamMin :: proc(aFlangerFilter: ^FlangerFilter, aParamIndex: u32) -> f32 ---
	FlangerFilter_create :: proc() -> ^FlangerFilter ---
	FlangerFilter_setParams :: proc(aFlangerFilter: ^FlangerFilter, aDelay: f32, aFreq: f32) -> b32 ---

	/*
		* FreeverbFilter
		*/
	FreeverbFilter_destroy :: proc(aFreeverbFilter: ^FreeverbFilter) ---
	FreeverbFilter_getParamCount :: proc(aFreeverbFilter: ^FreeverbFilter) -> i32 ---
	FreeverbFilter_getParamName :: proc(aFreeverbFilter: ^FreeverbFilter, aParamIndex: u32) -> cstring ---
	FreeverbFilter_getParamType :: proc(aFreeverbFilter: ^FreeverbFilter, aParamIndex: u32) -> u32 ---
	FreeverbFilter_getParamMax :: proc(aFreeverbFilter: ^FreeverbFilter, aParamIndex: u32) -> f32 ---
	FreeverbFilter_getParamMin :: proc(aFreeverbFilter: ^FreeverbFilter, aParamIndex: u32) -> f32 ---
	FreeverbFilter_create :: proc() -> ^FreeverbFilter ---
	FreeverbFilter_setParams :: proc(aFreeverbFilter: ^FreeverbFilter, aMode: f32, aRoomSize: f32, aDamp: f32, aWidth: f32) -> b32 ---

	/*
		* LofiFilter
		*/
	LofiFilter_destroy :: proc(aLofiFilter: ^LofiFilter) ---
	LofiFilter_getParamCount :: proc(aLofiFilter: ^LofiFilter) -> i32 ---
	LofiFilter_getParamName :: proc(aLofiFilter: ^LofiFilter, aParamIndex: u32) -> cstring ---
	LofiFilter_getParamType :: proc(aLofiFilter: ^LofiFilter, aParamIndex: u32) -> u32 ---
	LofiFilter_getParamMax :: proc(aLofiFilter: ^LofiFilter, aParamIndex: u32) -> f32 ---
	LofiFilter_getParamMin :: proc(aLofiFilter: ^LofiFilter, aParamIndex: u32) -> f32 ---
	LofiFilter_create :: proc() -> ^LofiFilter ---
	LofiFilter_setParams :: proc(aLofiFilter: ^LofiFilter, aSampleRate: f32, aBitdepth: f32) -> b32 ---
